Bug 1803539 - [loong64][mips64] Include the missing headers for simulator. r=jandem

Differential Revision: https://phabricator.services.mozilla.com/D163582